# 8bit_computer

./: Cargo.toml  README.md
src/: graphics.rs  lib.rs  main.rs  shareable.rs  state.rs  utils.rs
src/graphics/: piston.rs  sdl.rs
src/modules/: alu.rs  control.rs  flags_register.rs  instruction_decoder.rs  instruction_register.rs  mod.rs  output_register.rs  program_counter.rs  ram.rs  register.rs
