[package]
name = "breadboard_8bit"
version = "0.1.0"
authors = ["Aymeric Beringer <aymeric.beringer@epita.fr>"]
edition = "2018"
default-run = "breadboard_8bit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = { version = "0.98.0", optional = true }
sdl2 = { version = "0.32.2", optional = true, features = ["ttf", "gfx"] }
rusttype = { version = "0.7", optional = true }
piston2d-gfx_graphics = { version = "0.61", optional = true }
clap = "2.33.0"
atty = "0.2"

[features]
default = ["sdl"]
piston = ["piston_window", "rusttype", "piston2d-gfx_graphics"]
sdl = ["sdl2"]
